# code-generators-issue

./: cabal.project  code-generators-issue.cabal
codegen-different-package/: codegen-different-package.cabal
codegen-different-package/src/: CodegenDifferentPackage.hs
codegen-same-package/: CodegenSamePackage.hs
test/: Test.hs
