cabal-version:      3.8
name:               codegen-different-package
version:            0.1
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ryan Scott
maintainer:         ryan.gl.scott@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable codegen-different-package-exe
    hs-source-dirs:     src
    main-is:            CodegenDifferentPackage.hs
    ghc-options:        -Wall
    default-language:   Haskell2010
    build-depends:      base >= 4 && < 5, filepath
